# DebAI

./: .gitignore  Cargo.toml  README.md
daemon/: Cargo.toml
daemon/src/: main.rs  plugins.rs
installer/: aid.service  install.sh
intent/: Cargo.toml
intent/src/: lib.rs
plugins/: audit_logger.py  safety_sentinel.py
scripts/: build_deb.sh  build_vm.sh  run_vm.sh  sandbox.sh
terminal/: Cargo.toml
terminal/src/: main.rs
