[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aiterm"
path = "src/main.rs"

[dependencies]
intent = { path = "../intent" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
